--- a/mazes.html
+++ b/mazes.html
@@ -3,7 +3,7 @@
     <head> 
 	    <title>Hubner Central | Mazes</title>
    	    <link href="./styles/style.css" rel="stylesheet">
-    	<link rel="icon" href="./images/icons/mazes.jpg">
+    	<link rel="icon" href="./mazes.jpg">
     </head>
     <body>
         <nav class="header">
